--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+:root {
+    --body-background-color: #ddf;
+    --clicked-cell-background-color: #aaf;
+    --hit-cell-background: #f99;
+}
+
 * {
     user-select: none;
     box-sizing: border-box;
@@ -5,7 +11,7 @@
 }
 
 body {
-    background-color: #ddf;
+    background-color: var(--body-background-color);
 }
 
 h1 {
@@ -27,15 +33,32 @@ tr {
     border-collapse: collapse;
 }
 
+.openent-part td:hover {
+    background-color: aquamarine;
+}
+
 td:first-child {
     border: none;
 }
 
-td:hover {
-    background-color: aquamarine;
+.openent-part td:active {
+    background-color: var(--body-background-color);
 }
 
-.user-part,
+.openent-part .clicked {
+    background-color: var(--clicked-cell-background-color);
+}
+
+.openent-part .hit {
+    background-color: var(--hit-cell-background);
+}
+
+td:first-child:hover,
+td:first-child:active {
+    background-color: var(--body-background-color);
+}
+
+.td .user-part,
 .openent-part {
     display: flex;
     flex-direction: column;
