--- a/src/style/style.css
+++ b/src/style/style.css
@@ -36,15 +36,15 @@ td {
     border-collapse: collapse;
 }
 
-.openent-part td:hover {
+.opponent-part td:hover {
     background-color: aquamarine;
 }
 
-.openent-part td:active {
+.opponent-part td:active {
     background-color: var(--body-background-color);
 }
 
-.openent-part .clicked {
+.opponent-part .clicked {
     background-color: var(--clicked-cell-background-color);
 }
 
@@ -52,7 +52,7 @@ td {
     background-color: var(--hit-cell-background);
 }
 
-.openent-part .sunk {
+.opponent-part .sunk {
     background-color: var(--hit-cell-background);
     border: 2px solid red;
 }
@@ -63,7 +63,7 @@ td:first-child:active {
 }
 
 .user-part,
-.openent-part {
+.opponent-part {
     display: flex;
     flex-direction: column;
     align-items: center;
