--- a/src/style/style.css
+++ b/src/style/style.css
@@ -8,10 +8,15 @@
     user-select: none;
     box-sizing: border-box;
     font-family: Georgia, serif;
+    color: #055;
 }
 
 body {
     background-color: var(--body-background-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
@@ -67,4 +72,38 @@ td {
 
 .user-part .ship {
     border: 3px solid blue;
+}
+
+.screen {
+    width: 30vw;
+    height: 2rem;
+    padding: .3rem .2rem;
+    background-color: beige;
+    text-align: center;
+    font-weight: 400;
+    color: blue;
+    visibility: hidden;
+}
+
+.userboard-title {
+    font-size: .9rem;
+}
+
+.opponent-part .caption {
+    font-size: .9rem;
+}
+
+.randomise,
+.play,
+.restart {
+    margin-top: .5rem;
+    font-weight: bold;
+    font-size: .6rem;
+    color: blue;
+    padding: .3rem .2rem;
+    border-radius: .2rem;
+}
+
+.restart {
+    visibility: hidden;
 }
